config/bases/cluster-api/resources/cluster/mutatingwebhookconfigurations/capi-mutating-webhook-configuration.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: capi-webhook-system/capi-serving-cert
  creationTimestamp: null
  labels:
    cluster.x-k8s.io/provider: cluster-api
  name: capi-mutating-webhook-configuration
webhooks:
  - clientConfig:
      caBundle: Cg==
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /mutate-cluster-x-k8s-io-v1alpha3-cluster
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.cluster.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - clusters
    sideEffects: None
  - clientConfig:
      caBundle: Cg==
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /mutate-cluster-x-k8s-io-v1alpha3-machine
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.machine.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - machines
    sideEffects: None
  - clientConfig:
      caBundle: Cg==
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /mutate-cluster-x-k8s-io-v1alpha3-machinedeployment
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.machinedeployment.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - machinedeployments
    sideEffects: None
  - clientConfig:
      caBundle: Cg==
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /mutate-cluster-x-k8s-io-v1alpha3-machinehealthcheck
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.machinehealthcheck.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - machinehealthchecks
    sideEffects: None
  - clientConfig:
      caBundle: Cg==
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /mutate-cluster-x-k8s-io-v1alpha3-machineset
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.machineset.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - machinesets
    sideEffects: None
  - clientConfig:
      caBundle: Cg==
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /mutate-exp-cluster-x-k8s-io-v1alpha3-machinepool
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.exp.machinepool.cluster.x-k8s.io
    rules:
      - apiGroups:
          - exp.cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - machinepools
    sideEffects: None
  - clientConfig:
      caBundle: Cg==
      service:
        name: capi-webhook-service
        namespace: capi-webhook-system
        path: /mutate-addons-cluster-x-k8s-io-v1alpha3-clusterresourceset
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.clusterresourceset.addons.cluster.x-k8s.io
    rules:
      - apiGroups:
          - addons.cluster.x-k8s.io
        apiVersions:
          - v1alpha3
        operations:
          - CREATE
          - UPDATE
        resources:
          - clusterresourcesets
    sideEffects: None
